# dns-expert-monitor

./: .gitignore  LICENSE  README.es.md  README.md  dns-fix.py  fix_json.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
config/: detectors_config.yaml  detectors_simple.yaml  signatures.yaml
docs/: threat-detection-spa.md  threat-detection.md
src/dns_expert_monitor/: __init__.py  cli.py
src/dns_expert_monitor/analyzers/: __init__.py  cache_analyzer.py  dns_parser.py  security_analyzer.py  statistics_engine.py
src/dns_expert_monitor/core/: __init__.py  interface_manager.py  packet_engine.py  packet_queue.py
src/dns_expert_monitor/detectors/: __init__.py  amplification_detector.py  dns_tunneling.py  nxdomain_attack.py  poisoning_detector.py  security_manager.py
src/dns_expert_monitor/visualizers/: __init__.py  data_export.py  realtime_dashboard.py  report_generator.py
tests/: generate_test_traffic.py  test_security.py
